# esp32chat

./: BUG_REPORT.md  BUG_REPORT__OBSOLETE.md  PLAN.md  README.md  SESSION_CONTEXT.md  STAGE_CONTEXT.md  SUBSTAGE_CONTEXT.md  bug-report-rpi-refactor__OBSOLETE.md  check-rpi__OBSOLETE.py  deploy-rpi__OBSOLETE.py  fix-rpi2__OBSOLETE.py  fix-rpi3__OBSOLETE.py  fix-rpi4__OBSOLETE.py  fix-rpi__OBSOLETE.py  flash-all__OBSOLETE.ps1  flash-cardputer__OBSOLETE.ps1  flash-stickc__OBSOLETE.ps1  project_agents.md  rpi-config-ssh__OBSOLETE.py  rpi-deploy-server__OBSOLETE.sh  rpi-final-fix__OBSOLETE.sh  rpi-refactor-summary__OBSOLETE.md  rpi-setup__OBSOLETE.sh  server_os_3.4__OBSOLETE.txt  sweep_report__OBSOLETE.txt
server/: README.md  pyproject.toml  server_agents.md
server/app/: config.py  logging.py  main.py
server/config/: README.md  app.env.example  pi.env.example  prod.env.example  test.env.example
server/docs/: deploy-pi.md  pi-ap-nat.md
server/migrations/: 0001_initial.sql  0002_applications.sql  0003_open_mode_registration.sql  0004_chat_core.sql  0005_chat_private_rooms.sql  0006_blog_posts.sql  0007_support.sql  0008_account_profile.sql  0009_device_catalog.sql  0010_admin_user_controls.sql  0011_rfid_cards.sql  0012_security_baseline.sql  0013_ops_safety.sql  0014_media_attachments.sql  0015_device_combo_hashes.sql  0016_module_registry.sql  0017_edge_nodes.sql  0018_edge_sync_queue.sql  0019_internet_access.sql  0020_device_pairings.sql  0021_moderator_role.sql  README.md
server/scripts/: boot_selftest.py  configure_pi_ap_nat.sh  disable_pi_ap_nat.sh  install_pi.sh  (+3 more)
(+526 files in other folders)
