[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "local-chat-server"
version = "0.6.6"
description = "Server foundation for local distributed chat system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
